# Sentorr

./: .eslintrc.cjs  .eslintrc.json  .gitignore  Cargo.toml  NOTE.md  README.md  TODO.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  go.mod  index.html  jest.config.js  main.go  main.ts  package-lock.json  package.json  package.json.new  rollup.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  wails.json  weirdcrap.txt
@types/: perfect-seekbar.d.ts  typescript.d.ts  webtorrent.d.ts
__tests__/: imdb-api.ts  yts-api.ts
__tests__/utils/: constants.ts  functions.ts
frontend/: package-lock.json  package.json  package.json.md5  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/backend/imdb/: constants.ts  types.ts
frontend/src/: main.ts
src/: constants.ts  index.d.ts
src-tauri/: tauri.conf.json
src/@types/: env.d.ts  webtorrent.d.ts
src/common/: client.ts  constants.ts  functions.ts  ipc.ts  net.ts  port.ts  types.ts
src/frontend/: App.svelte  global.css  index.html
src/main/: app.ts  index.ts  worker.ts
src/preload/: global.d.ts  index.ts
src/renderer/: index.html
src/test/: imdb.test.ts
src/utils/: client.ts  constants.ts  functions.ts  types.ts
test/: imdb.test.ts  rargb.test.ts  yts.test.ts
test/common/: constants.ts  functions.ts
test/torrent/: piratebay.test.ts  rargb.test.ts  score.test.ts  server.test.ts  solidtorrents.test.ts  yts.test.ts
tests/: imdb.test.ts  imdb.ts  rargb.test.ts  yts.test.ts  yts.ts
tests/utils/: constants.ts  functions.ts
(+219 files in other folders)
