[package]
name = "torrent-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["macros"] }
librqbit = { version = "8.0.0" }
serde = "1.0.218"
time = "0.3.37"
tokio = "1.43.0"
tokio-util = "0.7.13"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }

[[bin]]
name = "torrent-server"
path = "src/backend/torrent/server/main.rs"
